--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -158,16 +158,7 @@
               filter: hue-rotate(360deg);
     }
   }
-  body {
-    display: -webkit-box;
-    display: flex;
-    height: 100vh;
-    -webkit-box-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-            justify-content: center;
-  }
-  
+ 
   .loading {
     position: relative;
     width: 96px;
