--- a/src/styles/foundation.css
+++ b/src/styles/foundation.css
@@ -1,4 +1,34 @@
-/* * @format
+* {
+    box-sizing: border-box;
+}
+
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+div {
+    display: block;
+}
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #EEE;
+    overflow-x: hidden;
+    overflow-y: visible;
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
 
 .container {
     width: 100%;
@@ -85,4 +115,6 @@
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
-} */
+    padding-left: 15px;
+    padding-right: 15px;
+}
